# bot-common

./: .gitignore  README.md  pyproject.toml
docs/: basic-design.md  runbook.md
scripts/: update-all.sh
src/bot_common/: __init__.py  ai_detection.py  ban_avoidance.py  discord.py  engagement_feedback.py  json_parser.py  logging.py  similarity.py  timezone.py  x_article_collector.py
tests/: test_discord.py  test_json_parser.py  test_logging.py  test_timezone.py
