[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-common"
version = "0.1.0"
description = "Shared utilities for Bot projects (json_parser, timezone, logging)"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
socialdata = ["httpx>=0.27"]
